// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WAN/> Snapshot WAN IPv4 (pppoe). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -44,29 +44,55 @@
      </div>
      <div
        class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
      >
        <label
-         for=\\"2\\"
+         for=\\"6\\"
+       >
+         PAP/CHAP username
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"6\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
      >
-         DHCP hostname
+       <label
+         for=\\"7\\"
+       >
+         PAP/CHAP password
        </label>
        <div
          class=\\"input-group\\"
        >
          <input
-           class=\\"form-control\\"
-           id=\\"2\\"
+           class=\\"form-control  is-invalid\\"
+           id=\\"7\\"
+           required=\\"\\"
            type=\\"text\\"
            value=\\"\\"
          />
        </div>
-       <small
-         class=\\"form-text text-muted\\"
+       <div
+         class=\\"invalid-feedback\\"
        >
-         Hostname which will be provided to DHCP server.
-       </small>
+         This field is required.
+       </div>
      </div>
      <h3>
        WAN IPv6
      </h3>
      <div
@@ -135,10 +161,11 @@
          </small>
        </div>
      </div>
      <button
        class=\\"btn btn-primary  offset-lg-8 col-lg-3 col-sm-12\\"
+       disabled=\\"\\"
        type=\\"submit\\"
      >
          Save
      </button>
    </form>"
`;

exports[`<WAN/> Snapshot WAN IPv4 (static). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -44,28 +44,127 @@
      </div>
      <div
        class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
      >
        <label
-         for=\\"2\\"
+         for=\\"6\\"
+       >
+         IP address
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"6\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
      >
-         DHCP hostname
+       <label
+         for=\\"7\\"
+       >
+         Network mask
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"7\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"8\\"
+       >
+         Gateway
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"8\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"9\\"
+       >
+         DNS server 1
        </label>
        <div
          class=\\"input-group\\"
        >
          <input
            class=\\"form-control\\"
-           id=\\"2\\"
+           id=\\"9\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         DNS server address is not required as the built-in DNS resolver is capable of working without it.
+       </small>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"10\\"
+       >
+         DNS server 2
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control\\"
+           id=\\"10\\"
            type=\\"text\\"
            value=\\"\\"
          />
        </div>
        <small
          class=\\"form-text text-muted\\"
        >
-         Hostname which will be provided to DHCP server.
+         DNS server address is not required as the built-in DNS resolver is capable of working without it.
        </small>
      </div>
      <h3>
        WAN IPv6
      </h3>
@@ -135,10 +234,11 @@
          </small>
        </div>
      </div>
      <button
        class=\\"btn btn-primary  offset-lg-8 col-lg-3 col-sm-12\\"
+       disabled=\\"\\"
        type=\\"submit\\"
      >
          Save
      </button>
    </form>"
`;

exports[`<WAN/> Snapshot WAN IPv6 (6in4), dynamic IPv4 handling enabled. 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -239,10 +239,100 @@
          >
            Some tunnel providers allow you to have public dynamic IPv4. Note that you need to fill in some extra fields to make it work.
          </small>
        </div>
      </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"20\\"
+       >
+         Tunnel ID
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"20\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         ID of your tunnel which was assigned to you by the provider.
+       </small>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"21\\"
+       >
+         Username
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"21\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         Username which will be used to provide credentials to your tunnel provider.
+       </small>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"22\\"
+       >
+         Key
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"22\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         Key which will be used to provide credentials to your tunnel provider.
+       </small>
+     </div>
      <h3>
        MAC
      </h3>
      <div
        class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\""
`;

exports[`<WAN/> Snapshot WAN IPv6 (6in4). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -106,10 +106,143 @@
          >
            6in4 (public IPv4 address required)
          </option>
        </select>
      </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"8\\"
+       >
+         Provider IPv4
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"8\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         This address will be used as a endpoint of the tunnel on the provider's side.
+       </small>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"9\\"
+       >
+         Routed IPv6 prefix
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"9\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         IPv6 addresses which will be routed to your network.
+       </small>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"10\\"
+       >
+         MTU
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"10\\"
+           max=\\"1500\\"
+           min=\\"1280\\"
+           required=\\"\\"
+           type=\\"number\\"
+           value=\\"\\"
+         />
+         <div
+           class=\\"input-group-append\\"
+         >
+           <button
+             aria-label=\\"Increase\\"
+             class=\\"btn btn-outline-secondary\\"
+             type=\\"button\\"
+           >
+             <i
+               class=\\"fas fa-plus\\"
+             />
+           </button>
+           <button
+             aria-label=\\"Decrease\\"
+             class=\\"btn btn-outline-secondary\\"
+             type=\\"button\\"
+           >
+             <i
+               class=\\"fas fa-minus\\"
+             />
+           </button>
+         </div>
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <div
+         class=\\"custom-control custom-checkbox \\"
+       >
+         <input
+           class=\\"custom-control-input\\"
+           id=\\"11\\"
+           type=\\"checkbox\\"
+         />
+         <label
+           class=\\"custom-control-label\\"
+           for=\\"11\\"
+         >
+           Dynamic IPv4 handling
+         </label>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           Some tunnel providers allow you to have public dynamic IPv4. Note that you need to fill in some extra fields to make it work.
+         </small>
+       </div>
+     </div>
      <h3>
        MAC
      </h3>
      <div
        class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
@@ -135,10 +268,11 @@
          </small>
        </div>
      </div>
      <button
        class=\\"btn btn-primary  offset-lg-8 col-lg-3 col-sm-12\\"
+       disabled=\\"\\"
        type=\\"submit\\"
      >
          Save
      </button>
    </form>"
`;

exports[`<WAN/> Snapshot WAN IPv6 (6to4). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -106,10 +106,40 @@
          >
            6in4 (public IPv4 address required)
          </option>
        </select>
      </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"8\\"
+       >
+         Public IPv4
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"8\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         Public IPv4 address is required.
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         In order to use 6to4 protocol, you might need to specify your public IPv4 address manually (e.g. when your WAN interface has a private address which is mapped to public IP).
+       </small>
+     </div>
      <h3>
        MAC
      </h3>
      <div
        class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
@@ -135,10 +165,11 @@
          </small>
        </div>
      </div>
      <button
        class=\\"btn btn-primary  offset-lg-8 col-lg-3 col-sm-12\\"
+       disabled=\\"\\"
        type=\\"submit\\"
      >
          Save
      </button>
    </form>"
`;

exports[`<WAN/> Snapshot WAN IPv6 (dhcpv6). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -106,10 +106,34 @@
          >
            6in4 (public IPv4 address required)
          </option>
        </select>
      </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"8\\"
+       >
+         Custom DUID
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control\\"
+           id=\\"8\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         DUID which will be provided to the DHCPv6 server.
+       </small>
+     </div>
      <h3>
        MAC
      </h3>
      <div
        class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\""
`;

exports[`<WAN/> Snapshot WAN IPv6 (static). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -106,10 +106,143 @@
          >
            6in4 (public IPv4 address required)
          </option>
        </select>
      </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"8\\"
+       >
+         Address
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"8\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         IPv6 address and prefix length for WAN interface e.g. 2001:db8:be13:37da::1/64
+       </small>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"9\\"
+       >
+         Gateway
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"9\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"10\\"
+       >
+         Prefix
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"10\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         Address range for local network, e.g. 2001:db8:be13:37da::/64
+       </small>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"11\\"
+       >
+         DNS server 1
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control\\"
+           id=\\"11\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         DNS server address is not required as the built-in DNS resolver is capable of working without it.
+       </small>
+     </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"12\\"
+       >
+         DNS server 2
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control\\"
+           id=\\"12\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         DNS server address is not required as the built-in DNS resolver is capable of working without it.
+       </small>
+     </div>
      <h3>
        MAC
      </h3>
      <div
        class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
@@ -135,10 +268,11 @@
          </small>
        </div>
      </div>
      <button
        class=\\"btn btn-primary  offset-lg-8 col-lg-3 col-sm-12\\"
+       disabled=\\"\\"
        type=\\"submit\\"
      >
          Save
      </button>
    </form>"
`;

exports[`<WAN/> Snapshot: MAC enabled 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -133,12 +133,43 @@
          >
            Useful in cases, when a specific MAC address is required by your internet service provider.
          </small>
        </div>
      </div>
+     <div
+       class=\\"form-group col-sm-12 offset-lg-1 col-lg-10\\"
+     >
+       <label
+         for=\\"9\\"
+       >
+         MAC address
+       </label>
+       <div
+         class=\\"input-group\\"
+       >
+         <input
+           class=\\"form-control  is-invalid\\"
+           id=\\"9\\"
+           required=\\"\\"
+           type=\\"text\\"
+           value=\\"\\"
+         />
+       </div>
+       <div
+         class=\\"invalid-feedback\\"
+       >
+         This field is required.
+       </div>
+       <small
+         class=\\"form-text text-muted\\"
+       >
+         Colon is used as a separator, for example 00:11:22:33:44:55
+       </small>
+     </div>
      <button
        class=\\"btn btn-primary  offset-lg-8 col-lg-3 col-sm-12\\"
+       disabled=\\"\\"
        type=\\"submit\\"
      >
          Save
      </button>
    </form>"
`;

exports[`<WAN/> Snapshot: WAN IPv4 dhcp, WAN IPv6 dhcp, MAC disabled 1`] = `
<DocumentFragment>
  <h1>
    WAN
  </h1>
  <p>
    
Here you specify your WAN port settings. Usually, you can leave this options untouched unless instructed
otherwise by your internet service provider. Also, in case there is a cable or DSL modem connecting your
router to the network, it is usually not necessary to change this setting.
        
  </p>
  <form>
    <h3>
      WAN IPv4
    </h3>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="1"
      >
        IPv4 protocol
      </label>
      <select
        class="custom-select"
        id="1"
      >
        <option
          value="dhcp"
        >
          DHCP (automatic configuration)
        </option>
        <option
          value="static"
        >
          Static IP address (manual configuration)
        </option>
        <option
          value="pppoe"
        >
          PPPoE (for DSL bridges, Modem Turris, etc.)
        </option>
      </select>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="2"
      >
        DHCP hostname
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="2"
          type="text"
          value=""
        />
      </div>
      <small
        class="form-text text-muted"
      >
        Hostname which will be provided to DHCP server.
      </small>
    </div>
    <h3>
      WAN IPv6
    </h3>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="3"
      >
        IPv6 protocol
      </label>
      <select
        class="custom-select"
        id="3"
      >
        <option
          value="none"
        >
          Disable IPv6
        </option>
        <option
          value="dhcpv6"
        >
          DHCPv6 (automatic configuration)
        </option>
        <option
          value="static"
        >
          Static IP address (manual configuration)
        </option>
        <option
          value="6to4"
        >
          6to4 (public IPv4 address required)
        </option>
        <option
          value="6in4"
        >
          6in4 (public IPv4 address required)
        </option>
      </select>
    </div>
    <h3>
      MAC
    </h3>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="4"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="4"
        >
          Custom MAC address
        </label>
        <small
          class="form-text text-muted"
        >
          Useful in cases, when a specific MAC address is required by your internet service provider.
        </small>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      type="submit"
    >
        Save
    </button>
  </form>
  <h1>
    Connection test
  </h1>
  <p>
    
Here you can test you connection settings. Remember to click on the 
    <b>
      Save button
    </b>
     before running the test.
Note that sometimes it takes a while before the connection is fully initialized. So it might be useful to
wait for a while before running this test.
        
  </p>
  <form>
    <button
      class="btn btn-primary offset-lg-8 col-lg-3 col-sm-12"
      type="submit"
    >
        Test connection
    </button>
  </form>
</DocumentFragment>
`;
